# netifaces

./: .hgignore  .travis.yml  CHANGELOG  README  README.rst  RELEASING  appveyor.yml  build-manylinux1  build-osx  fetch-win32-wheels  netifaces.c  pypi_windows_packages.bat  pyproject.toml  setup.cfg  setup.py  test.py
.travis/: install.sh
netifaces/: __init__.py  __init__.pyi  _netifaces.c
netifaces.egg-info/: PKG-INFO  SOURCES.txt
