[metadata]
name = netifaces
version = 0.10.9
author = Alastair Houghton
author_email = alastair@alastairs-place.net
url = https://github.com/al45tair/netifaces
description = Portable network interface information
long_description_content_type = text/x-rst
long_description = file: README.rst
license = MIT License
license_files =
    LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: System :: Networking
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
